--- a/src/main/resources/templates/show-inbound.html
+++ b/src/main/resources/templates/show-inbound.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en" layout:decorate = "~{layout}" xmlns:layout = "http://www.ultraq.net.nz/thymeleaf/layout">
     <head>
-        <title>Trang chủ</title>
+        <title>Inbound</title>
     </head>
     <body>
         <section layout:fragment = "content">
