--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -3,6 +3,9 @@
     <div class = "sidebar">
         <!-- Sidebar user panel (optional) -->
         <div class = "user-panel mt-3 pb-3 mb-3 d-flex">
+            <div class = "image">
+                <img alt = "User Image" class = "img-circle elevation-2" src = "dist/img/user2-160x160.jpg">
+            </div>
             <div class = "info">
                 <a class = "d-block" href = "/user">
                     [[${#authentication.name}]]
@@ -28,16 +31,16 @@
                 <!-- Add icons to the links using the .nav-icon class
                      with font-awesome or any other icon font library -->
                 <li class = "nav-item menu-open">
-                    <a class = "nav-link active" href = "/">
-                        <i class = "nav-icon fas fa-tachometer-alt"></i>
+                    <a class = "nav-link" href = "/">
+                        <i class = "fas fa-circle nav-icon"></i>
                         <p>
-                            Dashboard
+                            Hệ thống
                             <i class = "right fas fa-angle-left"></i>
                         </p>
                     </a>
                     <ul class = "nav nav-treeview">
                         <li class = "nav-item">
-                            <a class = "nav-link active" href = "#">
+                            <a class = "nav-link" href = "#">
                                 <i class = "far fa-circle nav-icon"></i>
                                 <p>Dashboard v1</p>
                             </a>
@@ -55,6 +58,18 @@
                             </a>
                         </li>
                     </ul>
+                </li>
+                <li class = "nav-item">
+                    <a class = "nav-link" href = "/inbound">
+                        <i class = "fas fa-circle nav-icon"></i>
+                        <p>Inbound</p>
+                    </a>
+                </li>
+                <li class = "nav-item">
+                    <a class = "nav-link" href = "/outbound">
+                        <i class = "fas fa-circle nav-icon"></i>
+                        <p>Outbound</p>
+                    </a>
                 </li>
             </ul>
         </nav>
