Sửa layout các trang.

--- a/src/main/resources/templates/show-outbound.html
+++ b/src/main/resources/templates/show-outbound.html
@@ -6,7 +6,22 @@
     <body class = "sidebar-mini">
         <section layout:fragment = "content">
             <div class = "wrapper">
-                <div class = "content-wrapper" style = "min-height: 1302.12px; padding-top: 1%">
+                <div class = "content-wrapper">
+                    <div class = "content-header">
+                        <div class = "container-fluid">
+                            <div class = "row mb-2">
+                                <div class = "col-sm-6">
+                                    <h1 class = "m-0">Outbound</h1>
+                                </div>
+                                <div class = "col-sm-6">
+                                    <ol class = "breadcrumb float-sm-right">
+                                        <li class = "breadcrumb-item"><a href = "/">Home</a></li>
+                                        <li class = "breadcrumb-item active">Outbound</li>
+                                    </ol>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <section class = "content">
                         <div class = "container-fluid">
                             <div class = "row">
