--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -14,26 +14,10 @@
 
     <!-- Right navbar links -->
     <ul class = "navbar-nav ml-auto">
-        <!-- Navbar Search -->
         <li class = "nav-item">
-            <a class = "nav-link" data-widget = "navbar-search" href = "#" role = "button">
-                <i class = "fas fa-search"></i>
+            <a class = "nav-link" href = "/user">
+                Xin chào [[${#authentication.name}]]!
             </a>
-            <div class = "navbar-search-block">
-                <form class = "form-inline">
-                    <div class = "input-group input-group-sm">
-                        <input aria-label = "Search" class = "form-control form-control-navbar" placeholder = "Search" type = "search">
-                        <div class = "input-group-append">
-                            <button class = "btn btn-navbar" type = "submit">
-                                <i class = "fas fa-search"></i>
-                            </button>
-                            <button class = "btn btn-navbar" data-widget = "navbar-search" type = "button">
-                                <i class = "fas fa-times"></i>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </div>
         </li>
         <li class = "nav-item">
             <a class = "nav-link" data-widget = "fullscreen" href = "#" role = "button">
