--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,18 +1,10 @@
 <aside class = "main-sidebar sidebar-dark-primary elevation-4" th:fragment = "sidebar">
+    <a class = "brand-link" href = "/">
+        <img alt = "NTT eMOI Logo" class = "brand-image img-circle elevation-3" src = "/dist/img/NTTeMOILogo.png" style = "opacity: .8">
+        <span class = "brand-text font-weight-light">NTT e-MOI</span>
+    </a>
     <!-- Sidebar -->
     <div class = "sidebar">
-        <!-- Sidebar user panel (optional) -->
-        <div class = "user-panel mt-3 pb-3 mb-3 d-flex">
-            <div class = "image">
-                <img alt = "User Image" class = "img-circle elevation-2" src = "dist/img/user2-160x160.jpg">
-            </div>
-            <div class = "info">
-                <a class = "d-block" href = "/user">
-                    [[${#authentication.name}]]
-                </a>
-            </div>
-        </div>
-
         <!-- SidebarSearch Form -->
         <div class = "form-inline">
             <div class = "input-group" data-widget = "sidebar-search">
