--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang = "en" layout:decorate = "~{layout}" xmlns:layout = "http://www.ultraq.net.nz/thymeleaf/layout">
     <head>
-        <title>Đăng nhập</title>
+        <title>Login</title>
     </head>
     <body>
         <section layout:fragment = "content">
             <div class = "content-wrapper">
+                <div class = "content-header">
+                    <div class = "container-fluid">
+                        <div class = "row mb-2">
+                            <div class = "col-sm-6">
+                                <h1 class = "m-0">Login</h1>
+                            </div>
+                            <div class = "col-sm-6">
+                                <ol class = "breadcrumb float-sm-right">
+                                    <li class = "breadcrumb-item"><a href = "/">Home</a></li>
+                                    <li class = "breadcrumb-item active">Login</li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <section class = "content">
                     <div class = "container-fluid">
                         <div class = "row">
