--- a/src/main/resources/templates/show-warehouse.html
+++ b/src/main/resources/templates/show-warehouse.html
@@ -5,7 +5,26 @@
     </head>
     <body>
         <section layout:fragment = "content">
-            // code trong đây
+            <div class = "content-wrapper">
+                <div class = "content-header">
+                    <div class = "container-fluid">
+                        <div class = "row mb-2">
+                            <div class = "col-sm-6">
+                                <h1 class = "m-0">Warehouse</h1>
+                            </div>
+                            <div class = "col-sm-6">
+                                <ol class = "breadcrumb float-sm-right">
+                                    <li class = "breadcrumb-item"><a href = "/">Home</a></li>
+                                    <li class = "breadcrumb-item active">Warehouse</li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <section class = "content">
+                    code here
+                </section>
+            </div>
         </section>
     </body>
 </html>
