--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -15,7 +15,7 @@
     <!-- Right navbar links -->
     <ul class = "navbar-nav ml-auto">
         <li class = "nav-item" sec:authorize = "isAuthenticated()">
-            <a class = "nav-link" href = "/user">
+            <a class = "nav-link" th:href = "'/user/' + ${#authentication.name}">
                 Hello [[${#authentication.name}]]
             </a>
         </li>
