--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -4,16 +4,18 @@
         <meta charset = "utf-8">
         <meta content = "width=device-width, initial-scale=1" name = "viewport">
         <title layout:title-pattern = "$CONTENT_TITLE"></title>
-        <link crossorigin = "anonymous" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity = "sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" referrerpolicy = "no-referrer" rel = "stylesheet"/>
-        <link href = "/css/adminlte.min.css" rel = "stylesheet">
+        <link href = "https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css" rel = "stylesheet">
+        <link crossorigin = "anonymous" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity = "sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" referrerpolicy = "no-referrer" rel = "stylesheet"/>
     </head>
     <body class = "hold-transition sidebar-mini layout-fixed">
         <header th:replace = "~{fragments/navbar :: navbar}"></header>
         <aside th:replace = "~{fragments/sidebar :: sidebar}"></aside>
         <section layout:fragment = "content"></section>
         <footer th:replace = "~{fragments/footer :: footer}"></footer>
-        <script src = "/js/jquery.min.js"></script>
-        <script src = "/js/adminlte.min.js"></script>
+
+        <script src = "https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/js/adminlte.min.js"></script>
+        <script crossorigin = "anonymous" integrity = "sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" referrerpolicy = "no-referrer" src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script crossorigin = "anonymous" integrity = "sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" src = "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <script>
             document.addEventListener('DOMContentLoaded', function () {
                 var currentPath = window.location.pathname;
