--- a/src/main/resources/templates/tutorial_form.html
+++ b/src/main/resources/templates/tutorial_form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en" layout:decorate = "~{layout}" xmlns:layout = "http://www.ultraq.net.nz/thymeleaf/layout">
     <head>
-        <title>Thêm tutorial</title>
+        <title>Add tutorial</title>
     </head>
     <body>
         <section layout:fragment = "content">
@@ -10,13 +10,13 @@
                     <div class = "container-fluid">
                         <div class = "row mb-2">
                             <div class = "col-sm-6">
-                                <h1 class = "m-0">Thêm tutorial</h1>
+                                <h1 class = "m-0">Add tutorial</h1>
                             </div>
                             <div class = "col-sm-6">
-                                <ol class = "breadcrumb float-sm-right">
-                                    <li class = "breadcrumb-item"><a href = "/">Trang chủ</a></li>
+                                <ol class = "breadcrumb float-right">
+                                    <li class = "breadcrumb-item"><a href = "/">Home</a></li>
                                     <li class = "breadcrumb-item"><a href = "/tutorials">Tutorials</a></li>
-                                    <li class = "breadcrumb-item active">Thêm</li>
+                                    <li class = "breadcrumb-item active">Add</li>
                                 </ol>
                             </div>
                         </div>
@@ -58,8 +58,8 @@
                                             </div>
 
                                             <div class = "text-center">
-                                                <input class = "btn btn-primary" type = "submit" value = "Lưu"/>
-                                                <a class = "btn btn-secondary" href = "/tutorials">Huỷ bỏ</a>
+                                                <input class = "btn btn-primary" type = "submit" value = "Save"/>
+                                                <a class = "btn btn-secondary" href = "/tutorials">Cancel</a>
                                             </div>
                                         </form>
                                     </div>
