--- a/src/main/resources/templates/fragments/searchForm.html
+++ b/src/main/resources/templates/fragments/searchForm.html
@@ -1,5 +1,5 @@
-<div class = "mb-3" th:fragment = "searchForm(target)">
-    <form id = "searchForm" th:action = "@{'/' + ${target}}">
+<div class = "mb-3" th:fragment = "searchForm(url)">
+    <form id = "searchForm" th:action = "@{'/' + ${url}}">
         <div class = "row d-flex">
             <div class = "col-md-10 mt-2">
                 <div class = "search">
@@ -8,8 +8,8 @@
             </div>
             <div class = "col-md-2 mt-2">
                 <button class = "btn btn-primary" type = "submit">Search</button>
-                <a class = "btn btn-secondary" th:href = "@{'/' + ${target}}">Cancel</a>
-                <a class = "btn btn-success" th:href = "@{'/' + ${target} + '/new'}">Add</a>
+                <a class = "btn btn-secondary" th:href = "@{'/' + ${url}}">Cancel</a>
+                <a class = "btn btn-success" th:href = "@{'/' + ${url} + '/new'}">Add</a>
             </div>
         </div>
     </form>
