--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,8 +4,8 @@
         <meta charset = "utf-8">
         <meta content = "width=device-width, initial-scale=1" name = "viewport">
         <title>Login</title>
-        <link crossorigin = "anonymous" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity = "sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" referrerpolicy = "no-referrer" rel = "stylesheet"/>
-        <link href = "/css/adminlte.min.css" rel = "stylesheet">
+        <link href = "https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css" rel = "stylesheet">
+        <link crossorigin = "anonymous" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity = "sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" referrerpolicy = "no-referrer" rel = "stylesheet"/>
     </head>
     <body>
         <nav class = "navbar navbar-light bg-light">
@@ -14,27 +14,29 @@
                 NTT e-MOI
             </a>
         </nav>
-        <div class = "card card-info">
-            <div class = "card-header">
-                <h3 class = "card-title">Đăng nhập</h3>
+        <div class = "container d-flex justify-content-center">
+            <div class = "card card-info" style = "margin-top: 20px; min-width: 50vw">
+                <div class = "card-header">
+                    <h3 class = "card-title">Đăng nhập</h3>
+                </div>
+                <form class = "form-horizontal" method = "post" th:action = "@{/login}">
+                    <div class = "card-body">
+                        <div class = "form-group row">
+                            <input class = "form-control" name = "username" placeholder = "Tên tài khoản" required type = "text">
+                        </div>
+                        <div class = "form-group row mb-0">
+                            <input class = "form-control" name = "password" placeholder = "Mật khẩu" required type = "password">
+                        </div>
+                    </div>
+                    <div class = "card-footer">
+                        <div class = "float-left">
+                            Chưa có tài khoản ?
+                            <a class = "text-decoration-none" href = "/register">Đăng ký</a>
+                        </div>
+                        <button class = "btn btn-info float-right" type = "submit">Đăng nhập</button>
+                    </div>
+                </form>
             </div>
-            <form class = "form-horizontal" method = "post" th:action = "@{/login}">
-                <div class = "card-body">
-                    <div class = "form-group row">
-                        <input class = "form-control" name = "username" placeholder = "Tên tài khoản" required type = "text">
-                    </div>
-                    <div class = "form-group row mb-0">
-                        <input class = "form-control" name = "password" placeholder = "Mật khẩu" required type = "password">
-                    </div>
-                </div>
-                <div class = "card-footer">
-                    <div class = "float-left">
-                        Chưa có tài khoản ?
-                        <a class = "text-decoration-none" href = "/register">Đăng ký</a>
-                    </div>
-                    <button class = "btn btn-info float-right" type = "submit">Đăng nhập</button>
-                </div>
-            </form>
         </div>
     </body>
 </html>
